[gd_scene load_steps=4 format=3 uid="uid://dj5jiwqy6m03p"]

[ext_resource type="Script" path="res://ui/canvas_layer_ui.gd" id="1_acnty"]
[ext_resource type="Texture2D" uid="uid://ymgihcw8jc76" path="res://assets/kenney/ui/back.png" id="1_qxxiy"]
[ext_resource type="Texture2D" uid="uid://d20771hcptbkl" path="res://assets/kenney/ui/tile_heart_morado.png" id="2_w36rc"]

[node name="CanvasLayerUI" type="CanvasLayer"]
script = ExtResource("1_acnty")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -182.0
offset_top = 13.0
offset_right = -17.0
offset_bottom = 77.0
grow_horizontal = 0
texture = ExtResource("1_qxxiy")

[node name="LabelTiempo" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.5
offset_top = -21.0
offset_right = 25.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "100"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -135.0
offset_top = 81.0
offset_right = -19.0
offset_bottom = 121.0
grow_horizontal = 0

[node name="Corazon1" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_w36rc")

[node name="Corazon2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_w36rc")

[node name="Corazon3" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_w36rc")
